--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "cat",
   "private": true,
   "version": "0.0.0",
-  "description": "a Sails application",
+  "description": "a cat app",
   "keywords": [],
   "dependencies": {
     "sails": "~0.10.5",
-    "sails-disk": "~0.10.0",
     "rc": "~0.5.0",
     "include-all": "~0.1.3",
     "ejs": "~0.8.4",
+
     "grunt": "0.4.2",
     "grunt-sync": "~0.0.4",
     "grunt-contrib-copy": "~0.5.0",
@@ -30,8 +30,8 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/asednev/cat.git"
+    "url": "git://github.com/exantrius/cat.git"
   },
-  "author": "asednev",
-  "license": ""
+  "author": "Andrew Sednev <exantrius@gmail.com>",
+  "license": "MIT"
 }
