--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
   "description": "a cat application",
   "keywords": [],
   "dependencies": {
-    "sails": "~0.10.5",
-    "rc": "~0.5.0",
-    "include-all": "~0.1.3",
-    "ejs": "~0.8.4",
-    "handlebars": "*",
+    "sails":                "~0.10.5",
+    "rc":                   "~0.5.0",
+    "include-all":          "~0.1.3",
+    "ejs":                  "~0.8.4",
+    "handlebars":           "*",
 
-    "grunt": "0.4.2",
-    "grunt-sync": "~0.0.4",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
+    "grunt":                "0.4.2",
+    "grunt-sync":           "~0.0.4",
+    "grunt-contrib-copy":   "~0.5.0",
+    "grunt-contrib-clean":  "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-jscs":   "~0.1.8",
+    "grunt-sails-linker":   "~0.9.5",
+    "grunt-contrib-jst":    "~0.6.0",
+    "grunt-contrib-watch":  "~0.5.3",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-less":   "0.11.1",
     "grunt-contrib-coffee": "~0.10.1"
   },
   "scripts": {
