--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 
     "grunt":                "0.4.2",
     "grunt-sync":           "~0.0.4",
+    "grunt-jscs":           "~1.2.0",
     "grunt-contrib-copy":   "~0.5.0",
     "grunt-contrib-clean":  "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-jscs":   "~0.1.8",
     "grunt-sails-linker":   "~0.9.5",
     "grunt-contrib-jst":    "~0.6.0",
     "grunt-contrib-watch":  "~0.5.3",
