--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt":                "0.4.2",
     "grunt-sync":           "~0.0.4",
     "grunt-jscs":           "~1.2.0",
+    "grunt-bower-concat":   "~0.4.0",
     "grunt-contrib-copy":   "~0.5.0",
     "grunt-contrib-clean":  "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
