--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "ejs":                  "~0.8.4",
     "handlebars":           "*",
 
+    "mocha":                "~2.1.0",
+    "sinon":                "~1.12.2",
+    "chai":                 "~1.10.0",
+
     "grunt":                "0.4.2",
     "grunt-sync":           "~0.0.4",
     "grunt-jscs":           "~1.2.0",
@@ -25,7 +29,8 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less":   "0.11.1",
-    "grunt-contrib-coffee": "~0.10.1"
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-mocha-test":     "~0.12.7"
   },
   "scripts": {
     "start": "node app.js",
