--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "cat-client-app",
   "dependencies": {
-    "handlebars":     "~1.3.0",
+    "handlebars":     "~2.0.0",
     "jquery":         "^1.11.1",
-    "ember":          "1.8.1",
+    "ember":          "~1.9",
     "ember-data":     "1.0.0-beta.12"
   }
 }
