--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "ejs":                  "~0.8.4",
     "handlebars":           "*",
 
-    "mocha":                "~2.1.0",
-    "sinon":                "~1.12.2",
-    "chai":                 "~1.10.0",
-
     "grunt":                "0.4.2",
     "grunt-sync":           "~0.0.4",
     "grunt-jscs":           "~1.2.0",
@@ -23,9 +19,9 @@
     "grunt-contrib-clean":  "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-sails-linker":   "~0.9.5",
-    "grunt-contrib-jst":    "~0.6.0",
-    "grunt-contrib-watch":  "~0.5.3",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less":   "0.11.1",
@@ -42,5 +38,9 @@
     "url": "git://github.com/exantrius/cat.git"
   },
   "author": "Andrew Sednev <exantrius@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "ember-template-compiler": "~1.9.0-alpha",
+    "grunt-ember-templates": "~0.5.0-alpha"
+  }
 }
