--- a/package.json
+++ b/package.json
@@ -5,29 +5,31 @@
   "description": "a cat application",
   "keywords": [],
   "dependencies": {
-    "sails":                "~0.10.5",
-    "rc":                   "~0.5.0",
-    "include-all":          "~0.1.3",
-    "ejs":                  "~0.8.4",
-    "handlebars":           "*",
+    "sails":                   "~0.10.5",
+    "rc":                      "~0.5.0",
+    "include-all":             "~0.1.3",
+    "ejs":                     "~0.8.4",
+    "handlebars":              "*",
+    "ember-template-compiler": "~1.9.0-alpha",
 
-    "grunt":                "0.4.2",
-    "grunt-sync":           "~0.0.4",
-    "grunt-jscs":           "~1.2.0",
-    "grunt-bower":          "~0.16.1",
-    "grunt-contrib-copy":   "~0.5.0",
-    "grunt-contrib-clean":  "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-less":   "0.11.1",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-mocha-test":     "~0.12.7",
-    "grunt-mocha-istanbul": "~2.3.0"
+    "grunt":                 "0.4.2",
+    "grunt-sync":            "~0.0.4",
+    "grunt-jscs":            "~1.2.0",
+    "grunt-bower":           "~0.16.1",
+    "grunt-contrib-copy":    "~0.5.0",
+    "grunt-contrib-clean":   "~0.5.0",
+    "grunt-contrib-concat":  "~0.3.0",
+    "grunt-contrib-jshint":  "~0.10.0",
+    "grunt-sails-linker":    "~0.9.5",
+    "grunt-contrib-jst":     "~0.6.0",
+    "grunt-contrib-watch":   "~0.5.3",
+    "grunt-contrib-uglify":  "~0.4.0",
+    "grunt-contrib-cssmin":  "~0.9.0",
+    "grunt-contrib-less":    "0.11.1",
+    "grunt-contrib-coffee":  "~0.10.1",
+    "grunt-mocha-test":      "~0.12.7",
+    "grunt-mocha-istanbul":  "~2.3.0",
+    "grunt-ember-templates": "~0.5.0-alpha"
   },
   "scripts": {
     "start": "node app.js",
@@ -38,10 +40,10 @@
     "type": "git",
     "url": "git://github.com/exantrius/cat.git"
   },
-  "author": "Andrew Sednev <exantrius@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "ember-template-compiler": "~1.9.0-alpha",
-    "grunt-ember-templates": "~0.5.0-alpha"
-  }
+  "authors": [
+    "Andrew Sednev <exantrius@gmail.com>",
+    "Nikita Kurilo",
+    "Egor Voronov"
+  ],
+  "license": "MIT"
 }
