--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "cat-client-app",
   "dependencies": {
     "handlebars":     "~2.0.0",
+    "underscore":     "~1.5",
     "jquery":         "^1.11.1",
+    "backbone":       "~1.1.2",
     "ember":          "~1.9",
     "ember-data":     "1.0.0-beta.12"
   }
