--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ejs":                     "~0.8.4",
     "handlebars":              "*",
     "ember-template-compiler": "~1.9.0-alpha",
+    "chai":                    "~1.10.0",
+    "sinon":                   "~1.12.2",
 
     "grunt":                 "0.4.2",
     "grunt-sync":            "~0.0.4",
