--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt":                 "0.4.2",
     "grunt-sync":            "~0.0.4",
     "grunt-jscs":            "~1.2.0",
+    "grunt-exec":            "~0.4.6",
     "grunt-bower":           "~0.16.1",
     "grunt-contrib-copy":    "~0.5.0",
     "grunt-contrib-clean":   "~0.5.0",
