--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "grunt-mocha-istanbul":  "~2.3.0",
     "grunt-ember-templates": "~0.5.0-alpha"
   },
+  "devDependencies": {
+    "api-mock": "~0.1.1"
+  },
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js",
