--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "jquery":         "^1.11.1",
     "backbone":       "~1.1.2",
     "ember":          "~1.9",
-    "ember-data":     "1.0.0-beta.12"
+    "ember-data":     "1.0.0-beta.12",
+    "ember-utils":    "~0.1.0"
   }
 }
