--- a/cat_components/package.json
+++ b/cat_components/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "bower":                                "^1.3.5",
         "broccoli":                             "^0.12.3",
+        "broccoli-cli":                         "~0.0.1",
         "broccoli-bower":                       "^0.2.0",
         "broccoli-coffee":                      "^0.1.0",
         "broccoli-dist-es6-module":             "^0.2.0",
