--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "grunt-contrib-watch":   "~0.5.3",
     "grunt-contrib-uglify":  "~0.4.0",
     "grunt-contrib-cssmin":  "~0.9.0",
-    "grunt-contrib-less":    "0.11.1",
+    "grunt-contrib-stylus" : "~0.20.0",
     "grunt-contrib-coffee":  "~0.10.1",
     "grunt-mocha-test":      "~0.12.7",
     "grunt-mocha-istanbul":  "~2.3.0",
