--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "grunt-sync": "~0.0.4",
     "handlebars": "*",
     "include-all": "~0.1.3",
+    "node-rest-client": "^1.4.4",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
-    "sails-rest": "0.0.4",
     "sinon": "~1.12.2",
-    "waterline": "^0.10.18"
+    "underscore.inflections": "^0.2.1"
   },
   "scripts": {
     "start": "node app.js",
